--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -335,8 +335,13 @@ video {
     --cor-purple: rgba(37, 6, 114);
     --cor-gray: rgba(139, 139, 139)
 }
+.container{
+  padding-left: 100px;
+  padding-right: 100px;
+
+}
 header{
-  padding: 30px 100px;
+  padding: 30px 0;
 }
 main{
   max-width: 100vw;
@@ -348,15 +353,18 @@ main{
 .relative{
   position: relative;
 }
+.hidden{
+  display: none;
+}
 section{
   padding: 50px 0;
 }
 
 .linha-reta{
     display: inline-block;
-    width: 100px;
-    height: 10px;
-    background: linear-gradient(to right, var(--cor-purple) 20%, var(--cor-blue) 0)
+    width: 150px;
+    height: 15px;
+    background: linear-gradient(to right, var(--cor-purple) 30%, var(--cor-blue) 0);
     
 }
 
@@ -368,7 +376,7 @@ section{
 }
 #block-1 .content{
   max-width: 30%;
-  padding-right: 30px;
+  padding-right: 104px;
   margin-top: 50px;
   display: flex;
   flex-direction: column;
@@ -383,15 +391,15 @@ section{
   font-weight: 600;
   color: var(--cor-purple);
 }
-#block-1 .content p{
-  font-size: 1.4rem;
+p{
+  font-size: 1.2rem;
   font-weight: 500;
   color: var(--cor-gray);
 }
 .btn {
   width: max-content;
   padding: 15px 40px;
-  background: linear-gradient(124deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 4%, rgba(0,212,255,1) 100%);
+  background: linear-gradient(20deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 4%, rgba(0,212,255,1) 69%);
   font-size: 1.3rem;
   font-weight: 500;
   color: white;
@@ -400,6 +408,109 @@ section{
 #block-1 .linha-reta{
   position: absolute;
   margin-top: 50px;
-  left: 34%;
+  left: 41.2%;
   transform: translateX(-50%);
+}
+
+#block-2.container {
+  padding-left: 250px;
+  padding-right: 250px;
+}
+
+#block-2 h1{
+  font-size: 2.5rem;
+  text-align: center;
+  font-weight: 700;
+  color: var(--cor-purple);
+}
+#block-2 .grid{
+  display: grid;
+  padding: 50px 0 ;
+  grid-template-columns: repeat(4,1fr);
+  gap: 100px;
+}
+#block-2 img{
+  width: 100%;
+}
+#block-2 .text{
+  padding: 0 20px;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  text-align: center;
+}
+
+#block-2 h2{
+  font-size: 2.2rem;
+  color: var(--cor-purple);
+  font-weight: 600;
+}
+
+#block-3 img{
+  min-width: 50%;
+}
+#block-3 .content{
+  width: 40%;
+  padding-right:50px;
+}
+#block-3 .content .linha-reta{
+  margin: 150px 0;
+}
+#block-3 .text p{
+  font-size: 1.8rem;
+}
+
+#block-3 .text p:nth-child(2){
+  margin: 50px 0 70px 0;
+  font-weight: 400;
+}
+
+#block-3 .text button{
+  font-size: 1.8rem;
+  color: rgba(11, 11, 185, 0.795);
+  font-weight: 700;
+  cursor: pointer;
+}
+#block-3 .text button span{
+  font-size: 1.4rem;
+}
+
+#block-4 .content{
+  margin-top: 200px;
+  width: 60%;
+  padding: 0 0 0  250px;
+}
+
+
+#block-4 .content h1{
+  font-size: 2.5rem;
+  color: var(--cor-purple);
+  font-weight: 700;
+  max-width: 350px;
+  margin: 100px 0 150px ;
+}
+
+
+#block-4 .content p{
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+#block-4 .content p .relative a{
+  color: var(--cor-purple);
+}
+
+#block-4 .content p .relative .linha-reta {
+  position: absolute;
+  width: 66px;
+  height: 7px;
+  top:40px;
+  left: 0;
+}
+#block-4 img{
+  position: absolute;
+  right: 0;
+  width: 45%;
+  top: -500px;
 }
